syntax = "proto3";

package manager;

service Manager {
  /* rpc Watch(WatchRequest) returns (stream InfoResponse); */
  rpc List(ListRequest) returns (ListResponse);
  rpc Search(SearchRequest) returns (SearchResponse);

  rpc Get(GetRequest) returns (GetResponse);
  rpc Info(InfoRequest) returns (InfoResponse);
  rpc GetCurrentClipboard(GetCurrentClipboardRequest)
      returns (GetCurrentClipboardResponse);
  rpc GetCurrentPrimary(GetCurrentPrimaryRequest)
      returns (GetCurrentPrimaryResponse);

  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc BatchRemove(BatchRemoveRequest) returns (BatchRemoveResponse);
  rpc Clear(ClearRequest) returns (ClearResponse);

  rpc Insert(InsertRequest) returns (InsertResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);

  rpc MarkAsClipboard(MarkAsClipboardRequest) returns (MarkAsClipboardResponse);
  rpc MarkAsPrimary(MarkAsPrimaryRequest) returns (MarkAsPrimaryResponse);

  rpc Length(LengthRequest) returns (LengthResponse);
}

enum ClipboardType {
  Clipboard = 0;
  Primary = 1;
}

message ClipboardData {
  uint64 id = 1;
  string data = 2;
  ClipboardType clipboard_type = 3;
  uint64 timestamp = 4;
  uint64 size = 5; 
}

message InsertRequest {
  ClipboardType clipboard_type = 1;
  string data = 2;
}
message InsertResponse { uint64 id = 1; }

message GetRequest { uint64 id = 1; }
message GetResponse { ClipboardData data = 1; }

message InfoRequest { uint64 id = 1; }
message InfoResponse { ClipboardData data = 1; }

message GetCurrentClipboardRequest {}
message GetCurrentClipboardResponse { ClipboardData data = 1; }

message GetCurrentPrimaryRequest {}
message GetCurrentPrimaryResponse { ClipboardData data = 1; }

message ListRequest {}
message ListResponse { repeated ClipboardData data = 1; }

message SearchRequest { string pat = 1; }
message SearchResponse { repeated ClipboardData data = 1; }

message UpdateRequest {
  uint64 id = 1;
  string data = 2;
}
message UpdateResponse {
  bool ok = 1;
  uint64 new_id = 2;
}

message MarkAsClipboardRequest { uint64 id = 1; }
message MarkAsClipboardResponse { bool ok = 1; }

message MarkAsPrimaryRequest { uint64 id = 1; }
message MarkAsPrimaryResponse { bool ok = 1; }

message LengthRequest {}
message LengthResponse { uint64 length = 1; }

message RemoveRequest { uint64 id = 1; }
message RemoveResponse { bool ok = 1; }

message BatchRemoveRequest { repeated uint64 ids = 1; }
message BatchRemoveResponse { repeated uint64 ids = 1; }

message ClearRequest {}
message ClearResponse {}
